# teamFour

Back-End/MeAche!_API/: .gitignore  Makefile
Back-End/MeAche!_API/.devcontainer/: Dockerfile  devcontainer.json
Back-End/MeAche!_API/meache/: .env.example  server.py
Back-End/MeAche!_API/meache/controllers/: __init__.py
Back-End/MeAche!_API/meache/database/: __init__.py
Back-End/MeAche!_API/meache/routers/: BusRouter.py  __init__.py  test.py
Back-End/MeAche!_API/meache/schemas/: BusSchemas.py  __init__.py  test.py
Back-End/MeAche_API/: Makefile  README.md  pyproject.toml
Back-End/MeAche_API/meache/: server.py
Back-End/MeAche_API/meache/alembic/: README  env.py
Back-End/MeAche_API/meache/alembic/versions/: 9359df43e721_criada_a_tabela_passageiros_e_a_.py  b4c657f39347_criada_a_tabela_do_bus.py
Back-End/MeAche_API/meache/controllers/: BusController.py  RotasController.py  __init__.py
Back-End/MeAche_API/meache/database/: __init__.py
Back-End/MeAche_API/meache/database/models/: __init__.py  model_database.py
Back-End/MeAche_API/meache/database/repository/: BusRepository.py  LocalizacaoRepository.py  PassageirosRepository.py  RotasRepository.py  __init__.py
Back-End/MeAche_API/meache/routers/: BusRouter.py  RotasRouter.py  __init__.py
Back-End/MeAche_API/meache/schemas/: BusSchemas.py  LocalizacaoSchemas.py  PassageirosSchemas.py  RotasSchemas.py  __init__.py
Front-End/HackathonBusHack/: package-lock.json
Front-End/HackathonBusHack/BusHack/: package-lock.json  package.json
Front-End/HackathonBusHack/BusHack/public/: index.html  style.css  (+1 more)
(+9 files in other folders)
