[tool.poetry]
name = "meache!"
version = "0.1.0"
description = ""
authors = ["Diaszano <lucasdiiassantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.43"
alembic = "^1.8.1"
asyncpg = "^0.27.0"
fastapi = {extras = ["all"], version = "^0.86.0"}
unicorn = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"
blue = "^0.9.1"
mkdocs = "^1.4.2"
prospector = "^1.7.7"
mypy = "^0.982"
pip-audit = "^2.4.5"
setuptools = "^65.5.1"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
